Fix broken stylesheet.

--- a/src/app/credits/credits.component.css
+++ b/src/app/credits/credits.component.css
@@ -22,9 +22,8 @@ div.container {
     background: transparent;
 }
 
-
 .jumbotron {
-    background: url(~/assets/tsilhqotin_hillside.jpg) no-repeat center center fixed, ;
+    background: url(~/assets/tsilhqotin_hillside.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
